added float, etc to solve problem

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
+<!-- The nav bar -->
 <nav>
-<a class="homenav" href="./index.html">Miles Helm</a> |
-<a class="navlink" href="about">about</a> |
-<a class="navlink" href="portfolio">portfolio</a> |
-<a class="navlink" href="contact">contact</a>
+	<a id="nameNav" href="./index.html">Miles Helm</a> |
+	<a class="navLink" href="about">About</a> |
+	<a class="navLink" href="portfolio">Portfolio</a> |
+	<a class="navLink" href="contact">Contact</a>
 </nav>
 
-<p><strong>Note:</strong> The nav tag is not supported in Internet Explorer 8 and earlier versions.</p>
+<section id="aboutMe">
+	<h1>About Me</h1>
+
+
+	<img id="profilePic" src="assets/images/mjhprofile.jpg">
+</section>
 
 </body>
 </html>
