positioning added classes and ids and keywords in css

--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
 
 <!-- The nav bar -->
 <nav>
-	<a id="nameNav" href="./index.html">Miles Helm</a> |
-	<a class="navLink" href="about">About</a> |
-	<a class="navLink" href="portfolio">Portfolio</a> |
-	<a class="navLink" href="contact">Contact</a>
+	<a id="nameNav" href="./index.html">Miles Helm</a>
+
+	<!-- this section is to the right on the nav bar -->
+	<div id="rightNav">
+		<a class="navLink" href="about">About</a>
+		<a class="navLink" href="portfolio">Portfolio</a>
+		<a class="navLink" href="contact">Contact</a>
+	</div>
 </nav>
 
 <section id="aboutMe">
 	<h1>About Me</h1>
-
-
 	<img id="profilePic" src="assets/images/mjhprofile.jpg">
+	<p>I first became interested in computers in the 1990s. The first time I ever used a web browser was the very first modern browser -- Mosaic. It was running on a Unix (DG/UX) server
+	</p>
+</section>
+
+<section class="sidebar">
+	<h2>Connect with Me</h2>
+	<img class="icon" src="assets/images/linkedin2.png">
+	<img class="icon" src="assets/images/github.png">
+	<img class="icon" src="assets/images/stack_overflow.png">
 </section>
 
 </body>
