added footer and refined

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- this section is to the right on the nav bar -->
 	<div id="rightNav">
 		<a class="navLink" href="about">About</a>
-		<a class="navLink" href="portfolio">Portfolio</a>
+		<a id="portfolioNav" class="navLink" href="portfolio">Portfolio</a>
 		<a class="navLink" href="contact">Contact</a>
 	</div>
 </nav>
@@ -27,10 +27,14 @@
 
 <section class="sidebar">
 	<h2>Connect with Me</h2>
-	<img class="icon" src="assets/images/linkedin2.png">
+	<img class="icon" src="assets/images/linkedin.png">
 	<img class="icon" src="assets/images/github.png">
 	<img class="icon" src="assets/images/stack_overflow.png">
 </section>
+
+<footer>
+	<p id="footerText">&#9400; Copyright 2017 Miles Helm</p>
+</footer>
 
 </body>
 </html>
