--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 	<!-- this section is to the right on the nav bar -->
 	<div id="rightNav">
-		<a class="navLink" href="about">About</a>
-		<a id="portfolioNav" class="navLink" href="portfolio">Portfolio</a>
-		<a class="navLink" href="contact">Contact</a>
+		<a class="navLink" href="index.html">About</a>
+		<a id="portfolioNav" class="navLink" href="portfolio.html">Portfolio</a>
+		<a class="navLink" href="contact.html">Contact</a>
 	</div>
 </nav>
 
@@ -27,9 +27,19 @@
 
 <section class="sidebar">
 	<h2>Connect with Me</h2>
-	<img class="icon" src="assets/images/linkedin.png">
-	<img class="icon" src="assets/images/github.png">
-	<img class="icon" src="assets/images/stack_overflow.png">
+
+	<!-- icons with links -->
+	<a href="https://www.linkedin.com/in/miles-helm-ba78333" target="_blank">
+		<img class="icon" src="assets/images/linkedin.png" > 
+	</a>
+
+	<a href="https://github.com/milesjhelm" target="_blank">
+		<img class="icon" src="assets/images/github.png"> 
+	</a>
+
+	<a href="http://stackoverflow.com/users/7482964/miles-helm" target="_blank">
+		<img class="icon" src="assets/images/stack_overflow.png"> 
+	</a>
 </section>
 
 <footer>
