--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,23 @@
 	</div>
 </nav>
 
-<section id="aboutMe">
-	<h1>About Me</h1>
-	<img id="profilePic" src="assets/images/mjhprofile.jpg">
-	<p>I first became interested in computers in the 1990s. The first time I ever used a web browser was the very first modern browser -- Mosaic. It was running on a Unix (DG/UX) server
-	</p>
+<section id="portfolio">
+	<h1>Portfolio</h1>
+	<div>
+		<img id="portfolioLeft" src="assets/images/port1.jpg">
+	</div>
+	<div>
+		<img id="portfolioRight" src="assets/images/port2.jpg">
+	</div>
+	<div>
+		<img id="portfolioLeft" src="assets/images/port3.jpg">
+	</div>
+	<div>
+		<img id="portfolioRight" src="assets/images/port4.jpg">
+	<div>
+		<img id="portfolioLeft" src="assets/images/port5.jpg">
+	</div>
+
 </section>
 
 <section class="sidebar">
