final before submitting hw

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,21 @@
 
 <section id="portfolio">
 	<h1>Portfolio</h1>
+
+	<!-- I think this section should be divs with background images and links, but 
+	I ran out of time. The comment immediately below were attempts -->
+	<!-- 	<div id="portfolioLeft1">
+		<img id="portfolioLeft" src="assets/images/port1.jpg">
+	</div>
+	<div id="portfolioRight1"> -->
+		<!-- <img id="portfolioRight" src="assets/images/port2.jpg">
+	</div> -->
 	<div>
 		<img id="portfolioLeft" src="assets/images/port1.jpg">
 	</div>
 	<div>
 		<img id="portfolioRight" src="assets/images/port2.jpg">
-	</div>
+	<div>
 	<div>
 		<img id="portfolioLeft" src="assets/images/port3.jpg">
 	</div>
