--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,19 @@
 	</div>
 </nav>
 
-<section id="aboutMe">
-	<h1>About Me</h1>
-	<img id="profilePic" src="assets/images/mjhprofile.jpg">
-	<p>I first became interested in computers in the 1990s. The first time I ever used a web browser was the very first modern browser -- Mosaic. It was running on a Unix (DG/UX) server
-	</p>
+<section id="contact">
+	<h1>Contact</h1>
+	<form>
+ 		 <label for="name">Name</label>
+ 		 <input type="text" id="fname" placeholder="full name" name="name">
+ 		 <br>
+ 		 <label for="email">Email</label>
+ 		 <input type="email" id="lname" placeholder="example@email.com" name="email">
+ 		 <br>
+ 		 <label for="contactText">Message</label>
+ 		 <textarea rows="10">Dear Miles...</textarea>
+ 		 <input type="button" class="button" value="Submit">
+	</form>
 </section>
 
 <section class="sidebar">
