--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Miles Helm HW1!  -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +23,7 @@
 <section id="aboutMe">
 	<h1>About Me</h1>
 	<img id="profilePic" src="assets/images/mjhprofile.jpg">
-	<p>I first became interested in computers in the 1990s. The first time I ever used a web browser was the very first modern browser -- Mosaic. It was running on a Unix (DG/UX) server
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
 	</p>
 </section>
 
